Transferred from the Adobe Open Source Subversion Repository
Revision: 13188
Author:   deeptika@adobe.com
Date:     2009-12-23T14:26:40.641841Z

Log Message: 
-----------
Fix for FLEXENT-1204 ([AIR Specific]Not compiling a halo AIR App with automation_spark.swc causes an RTE)

Fix: Moving spark related AIR delegates from automation_air package to new package automation_airspark

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/automation_air/build.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/automation_air/manifest_automation_air.xml</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/manifest_automation_airspark.xml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/src/spark/automation/delegates/components/SparkWindowedApplicationAutomationImpl.as</path>
<path kind="dir" action="D">/flex/sdk/trunk/frameworks/projects/automation_air/src/spark</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/src/spark/automation/delegates/components/SparkWindowAutomationImpl.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/src/spark</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/src/spark/automation/delegates/components</path>
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/automation_air/src/AutomationAirClasses.as</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/automation_airspark/src/spark/automation/delegates</path>
<path kind="file

--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,7 @@
 		<antcall target="automation_dmv"/>
 		<antcall target="automation_spark"/>
 		<antcall target="automation_air"/>
+		<antcall target="automation_airspark"/>
 		<antcall target="automation_flashflexkit"/>
     </target>
 
@@ -116,6 +117,7 @@
 		<ant dir="${basedir}/projects/automation_dmv" target="clean"/>
 		<ant dir="${basedir}/projects/automation_flashflexkit" target="clean"/>
 		<ant dir="${basedir}/projects/automation_spark" target="clean"/>
+		<ant dir="${basedir}/projects/automation_airspark" target="clean"/>
 		<ant dir="${basedir}/javascript" target="clean"/>
 		<!-- Delete empty folders -->
 		<delete dir="${basedir}/locale">
@@ -231,6 +233,10 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<ant dir="${basedir}/projects/automation_spark"/>
 	</target>
 	
+	<target name="automation_airspark" description="Clean build of automation_airspark swc">
+		<ant dir="${basedir}/projects/automation_airspark"/>
+	</target>
+
 	
     <target name="updateAIR" description="Rebuild a AIK SWC and SWF that depend on Flex" >
 		<property name="flex.home" value="${FLEX_HOME}" />     
