Transferred from the Adobe Open Source Subversion Repository
Revision: 13607
Author:   jimurphy@adobe.com
Date:     2010-01-19T02:10:04.001475Z

Log Message: 
-----------
Merge /branches/4.0.0revs 13385,13387,13388,13389,13390,13391,13392,13393,13405,13408,13409,13411,13417,13419,13423,13424,13428,13433,13434,13435,13436,13439,13440,13442,13444,13452,13454,13457,13458,13460,13466,13467,13468,13471,13472,13478,13479,13483,13486,13491,13493,13503,13505,13516,13518,13522,13523,13524,13530,13531,13532,13535,13537,13539,13540,13541,13548,13549,13553,13555,13560,13569 -> trunk

Checkintests pass

log from 4.0.0 changes
------------------------------------------------------------------------
r13385 | clucier@adobe.com | 2010-01-08 15:28:53 -0500 (Fri, 08 Jan 2010) | 8 lines

include-sources now expands tokens (such as {locale}).
SDK-24938 
------------------------------------------------------------------------

------------------------------------------------------------------------
r13387 | clucier@adobe.com | 2010-01-08 16:27:03 -0500 (Fri, 08 Jan 2010) | 10 lines

Adding mxml flavor of HTTPMultiService back to manifest.

SDK-24748 

------------------------------------------------------------------------

------------------------------------------------------------------------
r13388 | pfarland@adobe.com | 2010-01-08 17:35:37 -0500 (Fri, 08 Jan 2010) | 9 lines

No code changes here - addressing several FIXMEs for 4.0.0.


------------------------------------------------------------------------

------------------------------------------------------------------------
r13389 | gruehle@adobe.com | 2010-01-08 17:39:49 -0500 (Fri, 08 Jan 2010) | 12 lines

Deprecate (mostly) creationPolicy="queued". This feature hasn't worked correctly since Flex 1.5. 

The ContainerCreationPolicy.QUEUED property could not be deprecated due to a bug, but the Container.creationIndex property is deprecated, and the "queued" option is removed from the inspectable metadata enumeration.

SDK-2447

--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,compile,updateAIR" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,compile" description="Clean build of all SWCs"/>
 
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<antcall target="framework"/>
@@ -142,8 +142,9 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<delete file="${FLEX_HOME}/frameworks/libs/air/AIRAliases.js"/>
 		<delete file="${FLEX_HOME}/frameworks/libs/air/airglobal.abc"/>
 		<delete file="${FLEX_HOME}/frameworks/libs/air/servicemonitor.swf"/>
-		<!-- FIXME: For now, copy local override of build-sample-framework.xml -->
-		<copy file="${FLEX_HOME}/in/air/sample-frameworks-build.xml" todir="${FLEX_HOME}/frameworks/projects/air" overwrite="true" />
+
+		<!-- Delete AIR files for 3.x support -->
+		<delete dir="${FLEX_HOME}/frameworks/libs/air/flex3" quiet="true" />
 	</target>
 		
 	<target name="airframework" description="Clean build of airframework.swc">
@@ -235,7 +236,7 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<ant dir="${basedir}/projects/automation_airspark"/>
 	</target>
 
-	
+<!--	
     <target name="updateAIR" description="Rebuild a AIK SWC and SWF that depend on Flex" >
 		<property name="flex.home" value="${FLEX_HOME}" />     
 		
@@ -249,6 +250,6 @@ tar -xjf "AIR Integration Kit.tbz2"
 		</copy>
 		<delete dir="${basedir}/projects/air/build" quiet="true" />
     </target>
-
+-->
 
 </project>
