--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,7 @@
 		<antcall target="flash_integration"/>
 		<antcall target="utilities"/>
 		<antcall target="halo"/>
+		<antcall target="osmf"/>
 		<antcall target="wireframe"/>
 		<antcall target="automation"/>
 		<antcall target="automation_dmv"/>
@@ -56,7 +57,6 @@
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
-		<ant dir="${basedir}/projects/osmf" target="other.locales"/>
 		<ant dir="${basedir}/projects/textLayout" target="other.locales"/>
 		<ant dir="${basedir}/projects/playerglobal" target="other.locales" />
 		<ant dir="${basedir}/projects/automation" target="other.locales"/>
