Transferred from the Adobe Open Source Subversion Repository
Revision: 13699
Author:   jimurphy@adobe.com
Date:     2010-01-21T23:28:17.612686Z

Log Message: 
-----------
-update textLayout, osmf, and flash-integration 
 -to build proper _rb swcs with the recent localized properties that have been checked in for each project
 -to build proper fat-swcs with the recent localized xml that have been checked in for each project

updated the spark/build.xml to pint the properties files under textLayout and osmf 

removed files from package that were not required: build.xml, build.properties, sparkskins/assets folder.  

QE notes: 
Doc notes: 
Bugs: sdk-25171
Reviewer: 
Tests run: 
Is noteworthy for integration:

Modified Paths:
--------------
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/bundles/pt_BR/osmf.properties" copyfrom-rev="13662" action="A">/flex/sdk/trunk/frameworks/projects/osmf/bundles/pt_BR/osmf.properties</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/spark/bundles/fi_FI/textLayout.properties</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/osmf/bundles/pt_BR</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/spark/bundles/zh_TW/osmf.properties</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/textLayout/bundles/nb_NO</path>
<path kind="file" copyfrom-path="/flex/sdk/trunk/frameworks/projects/spark/bundles/sv_SE/textLayout.properties" copyfrom-rev="13662" action="A">/flex/sdk/trunk/frameworks/projects/textLayout/bundles/sv_SE/textLayout.properties</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/textLayout/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/rpc/build.xml</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/textLayout/bundles/ko_KR</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/projects/spark/bundles/it_IT/osmf.properties</path>
<path kind="

--- a/build.xml
+++ b/build.xml
@@ -58,8 +58,10 @@
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
 		<ant dir="${basedir}/projects/textLayout" target="other.locales"/>
+		<ant dir="${basedir}/projects/osmf" target="other.locales"/>
 		<ant dir="${basedir}/projects/playerglobal" target="other.locales" />
 		<ant dir="${basedir}/projects/automation" target="other.locales"/>
+		<ant dir="${basedir}/projects/flash-integration" target="other.locales"/>
 	</target>
 	
 	<target name="doc" >
@@ -76,7 +78,6 @@
 		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 		<ant dir="${basedir}/projects/automation" target="doc" />
-		<ant dir="${basedir}/projects/textLayout" target="doc" />
 	</target>
    
 	<target name="clean" description="Cleans all SWCs and their resource bundles">
