Transferred from the Adobe Open Source Subversion Repository
Revision: 14665
Author:   jimurphy@adobe.com
Date:     2010-03-10T15:12:16.894415Z

Log Message: 
-----------
merge 4.x revs 14576,14630,14631,14640 -> trunk 

QE notes: no
Doc notes: no
Bugs: no
Reviewer: 
Tests run: checkintests 
Is noteworthy for integration: no

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="dir" action="M">/flex/sdk/trunk</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/mac/Flash Player Debugger.app.zip</path>
<path kind="dir" action="M">/flex/sdk/trunk/frameworks/rsls</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/win/InstallPlugin.exe</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/lnx/install_flash_player_10_linux.tar.gz</path>
<path kind="dir" action="M">/flex/sdk/trunk/frameworks/projects/automation_airspark</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/lnx/flashplayerdebugger.tar.gz</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/lnx/libflashplayer.so.tar.gz</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/mac/Install Adobe Flash Player Debugger 10.1.dmg</path>
<path kind="dir" action="M">/flex/sdk/trunk/frameworks/libs</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/libs/player/10.1/playerglobal.swc</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/win/FlashPlayerDebugger.exe</path>
<path kind="file" action="M">/flex/sdk/trunk/in/player/10.1/win/InstallAX.exe</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247566 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -143,6 +143,9 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<delete file="${FLEX_HOME}/frameworks/libs/air/AIRAliases.js"/>
 		<delete file="${FLEX_HOME}/frameworks/libs/air/airglobal.abc"/>
 		<delete file="${FLEX_HOME}/frameworks/libs/air/servicemonitor.swf"/>
+		<delete file="${FLEX_HOME}/AIR SDK Readme.txt"/>
+		<delete dir="${FLEX_HOME}/lib/nai"/>
+		
 
 		<!-- Delete AIR files for 3.x support -->
 		<delete dir="${FLEX_HOME}/frameworks/libs/air/flex3" quiet="true" />
