Transferred from the Adobe Open Source Subversion Repository
Revision: 16262
Author:   dloverin@adobe.com
Date:     2010-05-20T18:44:39.210129Z

Log Message: 
-----------
Move mx components out of framework.swc into mx.swc

The new mx.swc library lives in the libs/mx directory.

QE notes: Of the 5 failures I saw: 1 was intermittent and 4 are not a bug.
Managers/StyleManager/AdvancedCSS/descendantSelectors/AdvancedCSS_descendantSelectors_Style descendantSelector_combining_nested_style
    This failure was intermittent.

mx/effects/Resize/Containers/Resize_Containers Effects_Resize_Containers_ApplicationControlBar_FromTo
mx/effects/Resize/Containers/Resize_Containers Effects_Resize_Containers_ApplicationControlBar_By
mx/effects/Resize/Containers/Resize_Containers Effects_Resize_Containers_ControlBar_FromTo
mx/effects/Resize/Containers/Resize_Containers Effects_Resize_Containers_ControlBar_By
    These failures are due to my code changes but I believe the old behavior was incorrect. When a control bar is the last child in a Panel it should appear at the bottom of the Panel. In the test case an ApplicationControlBar/ContorlBar is added to an empty Panel, making it the last child in the Panel. So it should appear at the bottom of the Panel instead of inside the Panel.

Doc notes: new library, mx.swc
Bugs: 
Reviewer: Alex
Tests run: 
Is noteworthy for integration: Yes

Modified Paths:
--------------
740 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247567 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -30,13 +30,14 @@
 
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<antcall target="framework"/>
+            <antcall target="mx"/>
 		<antcall target="rpc"/>
 		<antcall target="datavisualization"/>
 		<antcall target="spark"/>
 		<antcall target="sparkskins"/>
 		<antcall target="airframework"/>
-        <antcall target="airspark"/>		
-        <antcall target="flex"/>
+            <antcall target="airspark"/>		
+            <antcall target="flex"/>
 		<antcall target="flash_integration"/>
 		<antcall target="utilities"/>
 		<antcall target="halo"/>
@@ -52,8 +53,9 @@
 
 	<target name="other.locales" description ="Builds resource SWCs for all locales">
 		<ant dir="${basedir}/projects/framework" target="other.locales"/>
+		<ant dir="${basedir}/projects/mx" target="other.locales"/>
 		<ant dir="${basedir}/projects/airframework" target="other.locales"/>
-        <ant dir="${basedir}/projects/airspark" target="other.locales"/>
+            <ant dir="${basedir}/projects/airspark" target="other.locales"/>
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
@@ -66,6 +68,7 @@
 	
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
+		<ant dir="${basedir}/projects/mx" target="doc" />
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/datavisualization" target="doc" />
 		<ant dir="${basedir}/projects/spark" target="doc" />
@@ -99,6 +102,7 @@
 		<delete dir="${FLEX_HOME}/templates/air"/>
 		<!-- Delete output from SWC projects -->
 		<ant dir="${basedir}/projects/framework" target="clean"/>
+		<ant dir="${basedir}/projects/mx" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
         <ant dir="${basedir}/projects/airspark" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
@@ -171,12 +175,16 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<ant dir="${basedir}/projects/framework"/>
     </target>
 
-	 <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
+    <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
 		<ant dir="${basedir}/projects/framework_textLayout"/>
     </target>
 	
     <target name="halo" description="Clean build of halo.swc">
 		<ant dir="${basedir}/projects/halo"/>
+    </target>
+
+    <target name="mx" description="Clean build of mx.swc and its resource bundles">
+		<ant dir="${basedir}/projects/mx"/>
     </target>
 
     <target name="spark" description="Clean build of spark.swc">
