Transferred from the Adobe Open Source Subversion Repository
Revision: 16437
Author:   gruehle@adobe.com
Date:     2010-06-03T18:09:30.769414Z

Log Message: 
-----------
Add mobile projects and configuration.
* New mobilecomponents project that contains mobile-specific components.
* New mobiletheme project that contains mobile-specific skins. This includes skins for Spark components like Button and ScrollBar in addition to skins for mobile-specific components.
* New airmobile-config.xml file for mobile compiler configuration.
* The mobile projects are built from "ant main" at the root directory or frameworks directory.

There are a few known issues with this integration:
* The spark.css theme has warnings if mx.swc is excluded from the library path.
* Spark ButtonBarBase depends on mx.events.IndexChangedEvent, which is currently in mx.swc. In order to make ButtonBar work, mobile is temporarily adding mx.swc to the library path.

Modified Paths:
--------------
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/manifest.xml</path>
<path kind="dir" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/src/spark/core/navigators/supportClasses</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobiletheme/src/spark/skins/mobile/TabButtonSkin.as</path>
<path kind="dir" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/src/spark/events</path>
<path kind="dir" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/src/spark/core/navigators</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/src/spark/components/Screen.as</path>
<path kind="dir" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/mobiletheme</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/p

--- a/build.xml
+++ b/build.xml
@@ -36,8 +36,10 @@
 		<antcall target="spark"/>
 		<antcall target="sparkskins"/>
 		<antcall target="airframework"/>
-            <antcall target="airspark"/>		
-            <antcall target="flex"/>
+        <antcall target="airspark"/>		
+        <antcall target="mobilecomponents"/>		
+        <antcall target="mobiletheme"/>		
+        <antcall target="flex"/>
 		<antcall target="flash_integration"/>
 		<antcall target="utilities"/>
 		<antcall target="halo"/>
@@ -55,7 +57,9 @@
 		<ant dir="${basedir}/projects/framework" target="other.locales"/>
 		<ant dir="${basedir}/projects/mx" target="other.locales"/>
 		<ant dir="${basedir}/projects/airframework" target="other.locales"/>
-            <ant dir="${basedir}/projects/airspark" target="other.locales"/>
+        <ant dir="${basedir}/projects/airspark" target="other.locales"/>
+        <ant dir="${basedir}/projects/mobilecomponents" target="other.locales"/>
+        <ant dir="${basedir}/projects/mobiletheme" target="other.locales"/>
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
@@ -75,6 +79,8 @@
 		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
 	    <ant dir="${basedir}/projects/airspark" target="doc" />
+	    <ant dir="${basedir}/projects/mobilecomponents" target="doc" />
+	    <ant dir="${basedir}/projects/mobiletheme" target="doc" />
     	<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
         <ant dir="${basedir}/projects/osmf" target="doc" />
@@ -105,6 +111,8 @@
 		<ant dir="${basedir}/projects/mx" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
         <ant dir="${basedir}/projects/airspark" target="clean"/>
+        <ant dir="${basedir}/projects/mobilecomponents" target="clean"/>
+        <ant dir="${basedir}/projects/mobiletheme" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
@@ -161,6 +169,14 @@ tar -xjf "AIR Integration Kit.tbz2"
 
     <target name="airspark" description="Clean build of airspark.swc">
 		<ant dir="${basedir}/projects/airspark"/>
+    </target>
+
+    <target name="mobilecomponents" description="Clean build of mobilecomponents.swc">
+		<ant dir="${basedir}/projects/mobilecomponents"/>
+    </target>
+
+    <target name="mobiletheme" description="Clean build of mobile.swc">
+		<ant dir="${basedir}/projects/mobiletheme"/>
     </target>
 
 	<target name="datavisualization" description="Clean build of datavisualization.swc">
