Transferred from the Adobe Open Source Subversion Repository
Revision: 17006
Author:   gosmith@adobe.com
Date:     2010-07-22T00:34:09.786224Z

Log Message: 
-----------
The new files frameworks/metadata.xml and frameworks/locale/<locale>/metadata.properties are now packaged into flex_sdk_4.zip and flex_sdk_4_mpl.zip.

Also, 'ant clean' no longer accidentally deletes the metadata.properties file.

QE notes: None
Doc notes: None
Bugs: None
Reviewer: Pete Farland
Tests run: ant checkintests
Is noteworthy for integration: Sreenivas needs this.

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247570 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -131,6 +131,7 @@
 		<!-- Delete empty folders -->
 		<delete dir="${basedir}/locale">
 			<exclude name="**/automation_agent_rb.swc"/>
+			<exclude name="**/metadata.properties"/>
 			<exclude name="**/qtp_air_rb.swc"/>
 		</delete>
 		<delete dir="${basedir}/libs/generated"/>
