Transferred from the Adobe Open Source Subversion Repository
Revision: 17011
Author:   deeptika@adobe.com
Date:     2010-07-22T12:18:00.759409Z

Log Message: 
-----------
Moving ADG related spark item renderers to a new swc, spark_dmv.swc
Those item renderers need to be modified now to reintroduce its dependency on datavisualization.swc with strong typing in code.

QE notes: 
Doc notes: 
Bugs: FLEXDMV-2294 and SDK-25009 (create spark_dmv.swc for spark dmv classes)
Reviewer: 
Tests run: 
Is noteworthy for integration:

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/build_framework.xml</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark_dmv/build.xml</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark_dmv/defaults.css</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark_dmv/src/SparkDmvClasses.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/build.xml</path>
<path kind="dir" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark_dmv</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/src/SparkClasses.as</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/spark-manifest.xml</path>
<path kind="dir" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark_dmv/src</path>
<path kind="dir" action="M">/private/flex/sdk/branches/hero_private/frameworks/libs</path>
<path kind="file" action="A">/private/flex/sdk/branches/hero_private/frameworks/projects/spark_dmv/manifest_spark_dmv.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247571 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,7 @@
 		<antcall target="datavisualization"/>
 		<antcall target="spark"/>
 		<antcall target="sparkskins"/>
+		<antcall target="spark_dmv"/>
 		<antcall target="airframework"/>
         <antcall target="airspark"/>		
         <antcall target="mobilecomponents"/>		
@@ -61,6 +62,7 @@
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
+		<ant dir="${basedir}/projects/spark_dmv" target="other.locales"/>
 		<ant dir="${basedir}/projects/textLayout" target="other.locales"/>
 		<ant dir="${basedir}/projects/osmf" target="other.locales"/>
 		<ant dir="${basedir}/projects/playerglobal" target="other.locales" />
@@ -74,6 +76,7 @@
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/datavisualization" target="doc" />
 		<ant dir="${basedir}/projects/spark" target="doc" />
+		<ant dir="${basedir}/projects/spark_dmv" target="doc" />
 		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
 	    <ant dir="${basedir}/projects/airspark" target="doc" />
@@ -113,6 +116,7 @@
         <ant dir="${basedir}/projects/mobiletheme" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
+		<ant dir="${basedir}/projects/spark_dmv" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/halo" target="clean"/>
@@ -208,6 +212,10 @@ tar -xjf "AIR Integration Kit.tbz2"
 
      <target name="sparkskins" description="Clean build of sparkskins.swc">
 		<ant dir="${basedir}/projects/sparkskins"/>
+    </target>
+
+    <target name="spark_dmv" description="Clean build of sparkskins.swc">
+		<ant dir="${basedir}/projects/spark_dmv"/>
     </target>
 
     <target name="wireframe" description="Clean build of wireframe.swc">
