--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -35,6 +35,7 @@
 		<antcall target="datavisualization"/>
 		<antcall target="spark"/>
 		<antcall target="sparkskins"/>
+		<antcall target="spark_dmv"/>
 		<antcall target="airframework"/>
         <antcall target="airspark"/>		
         <antcall target="mobilecomponents"/>		
@@ -61,6 +62,7 @@
 		<ant dir="${basedir}/projects/rpc" target="other.locales"/>
 		<ant dir="${basedir}/projects/datavisualization" target="other.locales"/>
 		<ant dir="${basedir}/projects/spark" target="other.locales"/>
+		<ant dir="${basedir}/projects/spark_dmv" target="other.locales"/>
 		<ant dir="${basedir}/projects/textLayout" target="other.locales"/>
 		<ant dir="${basedir}/projects/osmf" target="other.locales"/>
 		<ant dir="${basedir}/projects/playerglobal" target="other.locales" />
@@ -74,6 +76,7 @@
 		<ant dir="${basedir}/projects/rpc" target="doc" />
 		<ant dir="${basedir}/projects/datavisualization" target="doc" />
 		<ant dir="${basedir}/projects/spark" target="doc" />
+		<ant dir="${basedir}/projects/spark_dmv" target="doc" />
 		<ant dir="${basedir}/projects/sparkskins" target="doc" />
 		<ant dir="${basedir}/projects/airframework" target="doc" />
 	    <ant dir="${basedir}/projects/airspark" target="doc" />
@@ -113,6 +116,7 @@
         <ant dir="${basedir}/projects/mobiletheme" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
 		<ant dir="${basedir}/projects/spark" target="clean"/>
+		<ant dir="${basedir}/projects/spark_dmv" target="clean"/>
 		<ant dir="${basedir}/projects/sparkskins" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/halo" target="clean"/>
@@ -208,6 +212,10 @@ tar -xjf "AIR Integration Kit.tbz2"
 
      <target name="sparkskins" description="Clean build of sparkskins.swc">
 		<ant dir="${basedir}/projects/sparkskins"/>
+    </target>
+
+    <target name="spark_dmv" description="Clean build of sparkskins.swc">
+		<ant dir="${basedir}/projects/spark_dmv"/>
     </target>
 
     <target name="wireframe" description="Clean build of wireframe.swc">
