--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
 <project name="frameworks" default="main" basedir=".">
 
 	<property name="FLEX_HOME" location=".."/>
+    <property name="playerglobal.version" value="11.1"/>
 
         <!-- Required for OSX 10.6 / Snow Leopard Performance -->
         <condition property="local.d32" value="-d32" >
@@ -34,7 +35,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,compile" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,thirdparty-downloads,javascript,compile" description="Clean build of all SWCs"/>
 
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<antcall target="framework"/>
@@ -101,7 +102,7 @@
 		<ant dir="${basedir}/projects/automation" target="doc" />
 	</target>
    
-	<target name="clean" description="Cleans all SWCs and their resource bundles">
+	<target name="clean" depends="thirdparty-clean" description="Cleans all SWCs and their resource bundles">
 		
 		<!-- Delete AIR files and directories from 'prepare' target -->
 		<delete file="${FLEX_HOME}/AIR SDK Readme.txt"/>
@@ -152,7 +153,21 @@
 		</delete>
 		<delete dir="${basedir}/libs/generated"/>
 	</target>
-		
+	
+    <target name="thirdparty-clean">
+        <delete failonerror="false" verbose="false">
+            <fileset dir="${basedir}/projects/textLayout">
+                <include name="**/**"/>
+                <exclude name="build.xml"/>
+                <exclude name=".*"/>
+            </fileset>
+        </delete>
+        <delete failonerror="false" verbose="true">
+            <fileset dir="${basedir}/libs" includes="textLayout.swc"/>
+            <fileset dir="${basedir}/libs/player/${playerglobal.version}" includes="playerglobal.swc"/>
+        </delete>
+    </target>
+
 	<target name="prepare" description="Prepares for building framework SWCs">
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
@@ -173,11 +188,59 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<delete file="${FLEX_HOME}/AIR SDK Readme.txt"/>
 		<delete dir="${FLEX_HOME}/lib/nai"/>
 		
-
 		<!-- Delete AIR files for 3.x support -->
 		<delete dir="${FLEX_HOME}/frameworks/libs/air/flex3" quiet="true" />
 	</target>
-		
+
+    <target name="thirdparty-downloads" depends="playerglobal-download, textLayout-download" description="Copies third-party software into place for build" />
+    
+    <target name="playerglobal-check">
+        <available file="${basedir}/libs/player/${playerglobal.version}/playerglobal.swc" property="playerglobal.swc.present"/>
+    </target>
+    
+    <target name="textLayout-check">
+        <available file="${basedir}/libs/textLayout.swc" property="textLayout.swc.present"/>
+    </target>
+
+    <!-- playerglobal.swc -->
+    <!-- Because this requires a network connection it copies playglobal.swc only if it doesn't already exist. -->
+    <target name="playerglobal-download" depends="playerglobal-check" unless="playerglobal.swc.present" description="Copies playerglobal.swc from the Adobe website">
+        <get src="http://fpdownload.macromedia.com/pub/flashplayer/updaters/11/playerglobal11_0.swc" 
+            dest="${basedir}/libs/player/${playerglobal.version}/playerglobal.swc" 
+            verbose="true"/>
+    </target>
+
+	<!-- textLayout.swc -->
+    <!-- Because this requires a network connection it downloads TLF only if it doesn't already exist. -->
+	<!-- ToDo: copy the TLF sources into projects/textLayout so they can be used for debugging. -->
+    <target name="textLayout-download2" depends="textLayout-check" unless="textLayout.swc.present" description="Copies Text Layout Framework from Sourceforge">
+        <mkdir dir="${basedir}/libs/temp"/>
+        <get src="http://sourceforge.net/projects/tlf.adobe/files/2.0/232/textLayout_build.zip/download" 
+            dest="${basedir}/libs/temp/textLayout_build.zip" 
+            verbose="true"/>
+        <unzip dest="${basedir}/libs/temp" src="${basedir}/libs/temp/textLayout_build.zip" />
+        <copy file="${basedir}/libs/temp/libs/textLayout.swc" todir="${basedir}/libs"/>
+        <delete dir="${basedir}/libs/temp" failonerror="false"/>
+    </target>
+
+    <target name="textLayout-download" depends="textLayout-check" unless="textLayout.swc.present" description="Copies Text Layout Framework from Sourceforge">
+        <mkdir dir="${basedir}/projects/textLayout/temp"/>
+        <get src="http://sourceforge.net/projects/tlf.adobe/files/2.0/232/textLayout_build.zip/download" 
+            dest="${basedir}/projects/textLayout/temp/textLayout_build.zip" 
+            verbose="true"/>
+        <unzip dest="${basedir}/projects/textLayout/temp" src="${basedir}/projects/textLayout/temp/textLayout_build.zip" />
+        <copy file="${basedir}/projects/textLayout/temp/libs/textLayout.swc" todir="${basedir}/libs"/>
+        <copy todir="${basedir}/projects/textLayout">
+            <fileset dir="${basedir}/projects/textLayout/temp">
+                <include name="**/**"/>
+                <exclude name="textLayout_build.zip"/>
+                <exclude name="build.xml"/>
+                <exclude name="libs/**"/>
+            </fileset>
+        </copy>
+        <delete dir="${basedir}/projects/textLayout/temp"/>
+    </target>
+
 	<target name="airframework" description="Clean build of airframework.swc">
 		<ant dir="${basedir}/projects/airframework"/>
     </target>
@@ -210,10 +273,6 @@ tar -xjf "AIR Integration Kit.tbz2"
 		<ant dir="${basedir}/projects/framework"/>
     </target>
 
-    <target name="framework_textLayout" description="Clean build of framework_textLayout.swc">
-		<ant dir="${basedir}/projects/framework_textLayout"/>
-    </target>
-	
     <target name="halo" description="Clean build of halo.swc">
 		<ant dir="${basedir}/projects/halo"/>
     </target>
